# deep-prior-pp

./: .gitignore  README.md
src/: main_icvl_com_refine.py  main_icvl_posereg_embedding.py  main_msra15_com_refine.py  main_msra15_posereg_embedding_crossval.py  main_nyu_com_refine.py  main_nyu_posereg_embedding.py  test_realtimepipeline.py
src/data/: basetypes.py  dataset.py  importers.py  transformations.py
src/net/: batchnormlayer.py  convlayer.py  convpoollayer.py  dropoutlayer.py  hiddenlayer.py  layer.py  layerparams.py  netbase.py  nonlinearitylayer.py  poollayer.py  poseregnet.py  resnet.py  scalenet.py
src/trainer/: nettrainer.py  optimizer.py  poseregnettrainer.py  scalenettrainer.py
src/util/: CMakeLists.txt  cameradevice.py  depthsense.cxx  handdetector.py  handpose_evaluation.py  helpers.py  initdepthsense.cxx  initdepthsense.h  realtimehandposepipeline.py  theano_helpers.py  vtkpointcloud.py
